fixed button spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,7 +26,11 @@
 }
 
 #sign-ins {
-  padding-right: 15px;
+  padding: 10px 20px 10px 20px;
+}
+
+#sign-ins * {
+  margin: 2px;
 }
 
 body {
